--- a/trunk/style3.css
+++ b/trunk/style3.css
@@ -1,38 +1,46 @@
 #subscribeForm{
-	background-color:#C7D3F5;
 	-moz-border-radius:5px;
 	-webkit-border-radius:5px;
 	border-radius:5px;
 	-moz-box-shadow:1px 1px 1px 1px #C8C8C8;
-	font:normal normal normal 0.9em/18px Arial, Helvetica, sans-serif;
+	background-color:#000;
+	color:#fff;
 }
-#subscribeForm label{
-	color:#5757C1;
+#subscribeForm form{
+	margin:5px;
+	border:none;
+	padding:0;
+}
+#subscribeForm fieldset{
+	border:none;
 }
 #subscribeForm textarea{
-	width:90%;
-	color:#5757C1;
-	font-family:Arial, Helvetica, sans-serif;
 }
 #subscribeForm input[type=text]{
-	color:#5757C1;
+	padding:0;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	border-radius:5px;
 }
 #subscribeForm input[type=submit]{
-	border:1px solid #FFF;
-	color:#FFFFFF;
-	background-color:#E06CD6;
+	border:2px solid #fff;
+	color:#fff;
+	background-color:#000;
 	cursor:pointer;
 	text-transform:uppercase;
 	font-weight:bold;
 	-moz-border-radius:5px;
 	-webkit-border-radius:5px;
 	border-radius:5px;
+	margin-bottom:10px;
 }
 #subscribeForm input[type=submit]:hover{
-	color:#E06CD6;
-	background-color:#FFFFFF;
+	color:#fff;
+	background-color:#333;
 }
-#subscribeForm .widget-title{
-	font-family:Arial, Helvetica, sans-serif;
-	color:#E06CD6;
+#subscribeForm{
+	color:#fff;
+}
+#subscribeForm p,  #subscribeForm h1, #subscribeForm h2, #subscribeForm h3,  #subscribeForm h4,  #subscribeForm h5{
+	color:#fff;
 }
