--- a/default.css
+++ b/default.css
@@ -1,4 +1,4 @@
-#subscribeForm{
+﻿#subscribeForm{
 	background-color:#CCC;
 	-moz-border-radius:5px;
 	-moz-box-shadow:1px 1px 1px 1px #C8C8C8;
@@ -16,13 +16,15 @@
 	color:#666666;
 }
 #subscribeForm input[type=submit]{
-	border:1px solid #FFF;
-	color:#333333;
+	border:1px solid #555;
+	color:#fff;
+	background-color:#777;
 	cursor:pointer;
-	background-color:#D4D0C8;
 	text-transform:uppercase;
 	font-weight:bold;
 	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	border-radius:5px;
 }
 #subscribeForm input[type=submit]:hover{
 	color:#D4D0C8;
