--- a/mailup.css
+++ b/mailup.css
@@ -42,10 +42,10 @@
 	/* width:430px; */
 	width:100%;
 	min-height:400px;
-	background-color:#015361;
+	/* background-color:#015361; */
 	padding:5px;
-	border:2px solid #CCC;
-	color:#fff;
+	/* border:2px solid #CCC; */
+	/* color:#fff; */
 }
 .menu_head {
 	display:block;
@@ -53,18 +53,25 @@
 	cursor: pointer;
 	position: relative;
 	margin:4px 1px;
-	font-weight: bold;
 	font-size: 120%;
-	border:1px solid #fff;
-	color:#fff;
-	height:28px;
+	color:#666;
+	background-color: #F1F1F1;
+    vertical-align: middle;
+	font-family: Georgia, "Times New Roman", "Bitstream Charter", Times, serif;
+	line-height: 34px;
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#F9F9F9), to(#ECECEC)); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient(top, #F9F9F9, #ECECEC); /* Chrome 10+, Saf5.1+ */
+	background-image: -moz-linear-gradient(top, #F9F9F9, #ECECEC); /* FF3.6+ */
+	background-image: -ms-linear-gradient(top, #F9F9F9, #ECECEC); /* IE10 */
+	background-image: -o-linear-gradient(top, #F9F9F9, #ECECEC); /* Opera 11.10+ */
+	background-image: linear-gradient(top, #F9F9F9, #ECECEC); /* W3C */
 }
 .menu_body {
 	display:none;
 }
 .menu_body a {
 	display:block;
-	color:#006699;
+	/* color:#006699; */
 	background-color:#EFEFEF;
 	padding-left:10px;
 	font-weight:bold;
@@ -72,18 +79,20 @@
 }
 
 .menu_body a:hover {
-	color: #000000;
+	/* color: #000000; */
 	text-decoration:underline;
 }
 
 .setting-table{
 	width:100%;
-	border:1px solid #000;
+	/* border:1px solid #000; */
+	padding: 10px 0px;
 	text-align:center;
 }
 
 .setting-table td{
 	padding:3px 3px;
+	text-align:left;
 }
 
 .setting-text{
@@ -98,15 +107,17 @@
 }
 
 td.setting-label{
-	text-align:right;
-	width:40%;
+	text-align:left;
+	width:10%;
+	min-width: 200px;
 }
 
 table.setting-table td label, table.setting-table th{
-	color:#fff;
+	text-align: left;
+	color:#666;
 }
 
-.setting-table .setting-target{
+.setting-table .setting-target {
 	text-align:left;
 }
 
@@ -117,14 +128,7 @@ table.setting-table td label, table.setting-table th{
 }
 
 .setting-save-container{
-	width:150px;
-	padding-top:10px;
-	float:right;
-}
-
-#setting-reset-btn, #setting-save-btn{
-	background-color:#ED8001;
-	color:#fff;
+	padding-top:20px;
 }
 
 img.help_icon{
@@ -150,4 +154,9 @@ img.toggle_icon{
 	z-index:1;
 }
 
-.about-mailup a { color:#9CC !important; line-height:30px; font-weight:normal; font-size:14px; }
+.about-mailup a { 
+	color:#9CC !important; 
+	line-height:30px; 
+	font-weight:normal; 
+	font-size:14px; 
+}
