--- a/style2.css
+++ b/style2.css
@@ -1,17 +1,18 @@
-#subscribeForm{
-	-moz-border-radius:5px;
-	-webkit-border-radius:5px;
-	border-radius:5px;
-	-moz-box-shadow:1px 1px 1px 1px #C8C8C8;
-	border:1px solid;
-}
-#subscribeForm form{
-	margin:5px;
-	border:none;
-	padding:0;
+﻿#subscribeForm {
 }
 #subscribeForm fieldset{
-	border:none;
+	margin:10px 0;
+	padding:10px;
+	border:1px solid #DDD;
+	-moz-border-radius:4px;
+	-webkit-border-radius:4px;
+	border-radius:4px;
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#F9F9F9), to(#ECECEC)); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient(top, #F9F9F9, #ECECEC); /* Chrome 10+, Saf5.1+ */
+	background-image: -moz-linear-gradient(top, #F9F9F9, #ECECEC); /* FF3.6+ */
+	background-image: -ms-linear-gradient(top, #F9F9F9, #ECECEC); /* IE10 */
+	background-image: -o-linear-gradient(top, #F9F9F9, #ECECEC); /* Opera 11.10+ */
+	background-image: linear-gradient(top, #F9F9F9, #ECECEC); /* W3C */
 }
 #subscribeForm textarea{
 }
@@ -22,9 +23,9 @@
 	border-radius:5px;
 }
 #subscribeForm input[type=submit]{
-	border:2px solid #666;
+	border:1px solid #555;
 	color:#fff;
-	background-color:#666;
+	background-color:#777;
 	cursor:pointer;
 	text-transform:uppercase;
 	font-weight:bold;
