--- a/style3.css
+++ b/style3.css
@@ -1,18 +1,13 @@
-#subscribeForm{
-	-moz-border-radius:5px;
-	-webkit-border-radius:5px;
-	border-radius:5px;
-	-moz-box-shadow:1px 1px 1px 1px #C8C8C8;
-	background-color:#000;
-	color:#fff;
-}
-#subscribeForm form{
-	margin:5px;
-	border:none;
-	padding:0;
+﻿#subscribeForm {
 }
 #subscribeForm fieldset{
-	border:none;
+	margin:10px 0;
+	padding:10px;
+	border:1px solid #DDD;
+	-moz-border-radius:4px;
+	-webkit-border-radius:4px;
+	border-radius:4px;
+	background-color:#000000;
 }
 #subscribeForm textarea{
 }
