--- a/trunk/style4.css
+++ b/trunk/style4.css
@@ -1,52 +1,24 @@
-#subscribeForm{
-	background-color:#000;
-	font:normal normal normal 0.9em/18px Arial, Helvetica, sans-serif;
-	text-align:center;
-	padding-bottom:10px;
-}
-#subscribeForm label{
-	color:#fff;
+﻿#subscribeForm {
+
 }
 #subscribeForm fieldset{
-	padding-bottom:10px;
-	border:none;
+
 }
 #subscribeForm textarea{
-	width:90%;
-	color:#fff;
-	font-family:Arial, Helvetica, sans-serif;
-	-moz-border-radius:25px;
-	-webkit-border-radius:25px;
-	border-radius:25px;
+
 }
 #subscribeForm input[type=text]{
-	color:#000;
-	-moz-border-radius:25px;
-	-webkit-border-radius:25px;
-	border-radius:25px;
+
 }
 #subscribeForm input[type=submit]{
-	color:#FFFFFF;
-	background-color:#000;
-	cursor:pointer;
-	text-transform:uppercase;
-	font-weight:bold;
-	-moz-border-radius:25px;
-	-webkit-border-radius:25px;
-	border-radius:25px;
+
 }
 #subscribeForm input[type=submit]:hover{
-	color:#000;
-	background-color:#FFF;
-	border:1px solid #000;
+
 }
-#subscribeForm .widget-title{
-	font-family:Arial, Helvetica, sans-serif;
-	color:#fff;
+#subscribeForm{
+
 }
 #subscribeForm p,  #subscribeForm h1, #subscribeForm h2, #subscribeForm h3,  #subscribeForm h4,  #subscribeForm h5{
-	color:#fff;
-}
-#subscribeForm {
-	color:#fff;
+
 }
