See notes for version 1.2 in readme.txt
git-svn-id: https://plugins.svn.wordpress.org/wp-mailup/trunk@574399 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/mailup.css
+++ b/mailup.css
@@ -155,8 +155,12 @@ img.toggle_icon{
 }
 
 .about-mailup a { 
-	color:#9CC !important; 
-	line-height:30px; 
+	color:#21759B !important; 
+	line-height:26px; 
 	font-weight:normal; 
-	font-size:14px; 
+	font-size:13px;
+	text-decoration: none;
 }
+	.about-mailup a:hover { 
+		color: #666 !important;
+	}
