--- a/style7.css
+++ b/style7.css
@@ -3,11 +3,11 @@
 #subscribeForm fieldset{
 	margin:10px 0;
 	padding:10px;
-	border:1px solid #DDD;
+	border:1px solid #CCC;
 	-moz-border-radius:6px;
 	-webkit-border-radius:6px;
 	border-radius:6px;
-	background-color:#000000;
+	background-color:#F58221;
 }
 #subscribeForm textarea{
 }
@@ -16,25 +16,27 @@
 	-moz-border-radius:5px;
 	-webkit-border-radius:5px;
 	border-radius:5px;
-	background-color:#777;
-	border: 1px solid #444;
+	background-color:#E36C0B;
+	border: 1px solid #C9600A;
 	color:#FFF;
 }
 #subscribeForm input[type=submit]{
-	border:2px solid #fff;
-	color:#fff;
-	background-color:#000;
 	cursor:pointer;
 	text-transform:uppercase;
 	font-weight:bold;
 	-moz-border-radius:5px;
 	-webkit-border-radius:5px;
 	border-radius:5px;
-	margin-bottom:10px;
+	padding:3px 6px;
+	margin-bottom:5px;
+	background-color:#E36C0B;
+	border: 1px solid #C9600A;
+	color:#fff;
 }
 #subscribeForm input[type=submit]:hover{
 	color:#fff;
-	background-color:#333;
+	border: 1px solid #FFF;
+	background-color:#F58221;
 }
 #subscribeForm{
 	color:#fff;
@@ -45,4 +47,7 @@
 #subscribeForm p {
 	padding:0;
 	margin: 0 0 10px 0;
+}
+#subscribeForm a {
+	color: #005964;
 }
