--- a/style2.css
+++ b/style2.css
@@ -1,12 +1,13 @@
 ﻿#subscribeForm {
 }
 #subscribeForm fieldset{
+	width: 200px;
 	margin:10px 0;
-	padding:10px;
 	border:1px solid #DDD;
 	-moz-border-radius:6px;
 	-webkit-border-radius:6px;
 	border-radius:6px;
+	background-color: #ECECEC;
 	background-image: -webkit-gradient(linear, left top, left bottom, from(#F9F9F9), to(#ECECEC)); /* Saf4+, Chrome */
 	background-image: -webkit-linear-gradient(top, #F9F9F9, #ECECEC); /* Chrome 10+, Saf5.1+ */
 	background-image: -moz-linear-gradient(top, #F9F9F9, #ECECEC); /* FF3.6+ */
@@ -17,10 +18,11 @@
 #subscribeForm textarea{
 }
 #subscribeForm input[type=text]{
-	padding:0;
 	-moz-border-radius:5px;
 	-webkit-border-radius:5px;
 	border-radius:5px;
+	width: 170px;
+	height: 18px;
 }
 #subscribeForm input[type=submit]{
 	border:1px solid #555;
@@ -39,5 +41,13 @@
 }
 #subscribeForm p {
 	padding:0;
-	margin: 0 0 10px 0;
+	margin: 0 10px 10px 10px;
+}
+#subscribeForm h3 {
+	padding:0;
+	margin: 10px 0 0 10px;
+	font-size: 12px;
+}
+#subscribeForm fieldset img {
+	margin-left: 10px;
 }
