--- a/style5.css
+++ b/style5.css
@@ -3,6 +3,7 @@
 	padding:0;
 }
 #subscribeForm fieldset{
+	color:#000000;
 	margin:0;
 	padding:10px;
 	border: 0;
@@ -11,11 +12,13 @@
 	background-image: -moz-linear-gradient(top, #F9F9F9, #ECECEC); /* FF3.6+ */
 	background-image: -ms-linear-gradient(top, #F9F9F9, #ECECEC); /* IE10 */
 	background-image: -o-linear-gradient(top, #F9F9F9, #ECECEC); /* Opera 11.10+ */
-	background-image: linear-gradient(top, #F9F9F9, #ECECEC); /* W3C */
+	background-image: linear-gradient(top, #F9F9F9, #ECECEC); /* W3C */}
+#subscribeForm input[type=text]{
+	color:#000000;
 }
 #subscribeForm input[type=submit]{
 	border:1px solid #555;
-	color:#fff;
+	color:#000000;
 	background-color:#888;
 	cursor:pointer;
 	font-size: 11px;
@@ -28,4 +31,19 @@
 #subscribeForm .muSubmit {
 	margin: 5px 0 0 0;
 	padding: 0;
+}
+/*setting placehyolder color for each browser*/
+#subscribeForm input[type=text]::-webkit-input-placeholder { /* WebKit browsers */
+    color:#000000;
+}
+#subscribeForm input[type=text]:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color:#000000;/*#909;*/
+   opacity:  1;
+}
+#subscribeForm input[type=text]::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color:#000000;
+   opacity:  1;
+}
+#subscribeForm input[type=text]:-ms-input-placeholder { /* Internet Explorer 10+ */
+   color:#000000;
 }
