--- a/style1.css
+++ b/style1.css
@@ -1,6 +1,8 @@
 ﻿#subscribeForm {
+	color:#000000;
 }
 #subscribeForm fieldset{
+	color:#000000;
 	width: 200px;
 	margin:10px 0;
 	border:1px solid #DDD;
@@ -14,11 +16,11 @@
 }
 #subscribeForm input[type=text]{
 	width: 170px;
-	height: 18px;
+	color:#000000;
 }
 #subscribeForm input[type=submit]{
 	border:1px solid #555;
-	color:#fff;
+	color:#000000;
 	background-color:#888;
 	cursor:pointer;
 	text-transform:uppercase;
@@ -38,4 +40,19 @@
 }
 #subscribeForm fieldset img {
 	margin-left: 10px;
+}
+/*setting placehyolder color for each browser*/
+#subscribeForm input[type=text]::-webkit-input-placeholder { /* WebKit browsers */
+    color:#000000;
+}
+#subscribeForm input[type=text]:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color:#000000;/*#909;*/
+   opacity:  1;
+}
+#subscribeForm input[type=text]::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color:#000000;
+   opacity:  1;
+}
+#subscribeForm input[type=text]:-ms-input-placeholder { /* Internet Explorer 10+ */
+   color:#000000;
 }
