--- a/style3.css
+++ b/style3.css
@@ -69,3 +69,6 @@
 #subscribeForm input[type=text]:-ms-input-placeholder { /* Internet Explorer 10+ */
    color:    #DDD;
 }
+#subscribeForm input[placeholder]{	/*For any unsupported browser*/
+	color:	#DDD;
+}
