--- a/style5.css
+++ b/style5.css
@@ -47,3 +47,6 @@
 #subscribeForm input[type=text]:-ms-input-placeholder { /* Internet Explorer 10+ */
    color:#000000;
 }
+#subscribeForm input[placeholder]{	/*For any unsupported browser*/
+	color:	#000;
+}
