--- a/style6.css
+++ b/style6.css
@@ -74,3 +74,6 @@
 #subscribeForm input[type=text]:-ms-input-placeholder { /* Internet Explorer 10+ */
    color:    #00D;
 }
+#subscribeForm input[placeholder]{	/*For any unsupported browser*/
+	color:	#00D;
+}
