Changed new label text
git-svn-id: https://plugins.svn.wordpress.org/wp-mailup/trunk@1180935 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/style6.css
+++ b/style6.css
@@ -74,6 +74,6 @@
 #subscribeForm input[type=text]:-ms-input-placeholder { /* Internet Explorer 10+ */
    color:    #00D;
 }
-#subscribeForm input[placeholder]{	/*For any unsupported browser*/
+/*#subscribeForm input[placeholder]{	/*For any unsupported browser
 	color:	#00D;
-}
+}*/
