--- a/style7.css
+++ b/style7.css
@@ -75,6 +75,6 @@
 #subscribeForm input[type=text]:-ms-input-placeholder { /* Internet Explorer 10+ */
    color:    #FFAA30;
 }
-#subscribeForm input[placeholder]{	/*For any unsupported browser*/
+/*#subscribeForm input[placeholder]{	/*For any unsupported browser
 	color:	#FFAA30;
-}
+}*/
