fixed placeholder colors
git-svn-id: https://plugins.svn.wordpress.org/wp-mailup/trunk@1180948 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/style1.css
+++ b/style1.css
@@ -56,6 +56,6 @@
 #subscribeForm input[type=text]:-ms-input-placeholder { /* Internet Explorer 10+ */
    color:#000000;
 }
-/*#subscribeForm input[placeholder]{	/*For any unsupported browser
+#subscribeForm input[type=text].placeholdersjs{	/*For any unsupported browser*/
 	color:	#000;
-}*/
+}
