--- a/style3.css
+++ b/style3.css
@@ -69,6 +69,6 @@
 #subscribeForm input[type=text]:-ms-input-placeholder { /* Internet Explorer 10+ */
    color:    #DDD;
 }
-/*#subscribeForm input[placeholder]{	/*For any unsupported browser
+#subscribeForm input[type=text].placeholdersjs{	/*For any unsupported browser*/
 	color:	#DDD;
-}*/
+}
