--- a/style5.css
+++ b/style5.css
@@ -47,6 +47,6 @@
 #subscribeForm input[type=text]:-ms-input-placeholder { /* Internet Explorer 10+ */
    color:#000000;
 }
-/*#subscribeForm input[placeholder]{	/*For any unsupported browser
+#subscribeForm input[type=text].placeholdersjs{	/*For any unsupported browser*/
 	color:	#000;
-}*/
+}
